--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,5 +1,7 @@
 ---
 import '@/styles/globals.css';
+import ContactHeader from '../components/home/ContactHeader.astro';
+import Navbar from '../components/home/Navbar';
 ---
 
 <html lang='en'>
@@ -11,6 +13,12 @@ import '@/styles/globals.css';
     <title>OmniFert</title>
   </head>
   <body>
-    <slot />
+    <header class='bg-[--clr-green-01]'>
+      <ContactHeader />
+      <Navbar client:load />
+    </header>
+    <main>
+      <slot />
+    </main>
   </body>
 </html>
