--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,11 @@
 ---
 import MainLayout from '../layouts/MainLayout.astro';
+import Hero from '../components/home/Hero.astro';
 ---
 
 <MainLayout>
-  
+  <Hero />
+  <div>
+    <div></div>
+  </div>
 </MainLayout>
