--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -13,12 +13,12 @@ import { Image } from 'astro:assets';
         class='mt-20 text-[--clr-white-01] text-center lg:text-left max-w-[--max-width-content] mx-auto flex-grow'
       >
         <h1
-          class='text-5xl sm:text-7xl md:text-8xl sm:w-4/5 lg:w-3/5 sm:mx-auto lg:mx-0 font-bold'
+          class='text-5xl sm:text-7xl md:text-8xl sm:w-4/5 lg:w-3/5 sm:mx-auto lg:mx-0 font-bold font-gothamBold'
         >
           Fertilizers for the future
         </h1>
         <div
-          class='mt-20 sm:mt-14 flex flex-col sm:flex-row gap-4 sm:gap-6 justify-center lg:justify-start items-center lg:text-xl lg:ml-2'
+          class='mt-20 sm:mt-14 flex flex-col sm:flex-row gap-4 sm:gap-6 justify-center lg:justify-start items-center lg:text-xl lg:ml-2 font-gothamBook'
         >
           <p class='fert-before'>Soils Testing</p>
           <p class='fert-before'>Crop Cultivation</p>
@@ -27,10 +27,10 @@ import { Image } from 'astro:assets';
         <div
           class='flex flex-col lg:flex-row gap-4 justify-center lg:justify-start lg:ml-2 items-center mt-20 sm:mt-14'
         >
-          <Button variant={'leaf'} size={'leafLg'} className='w-fit'>
+          <Button variant={'leaf'} size={'leafLg'} className='w-fit font-gothamLight'>
             Explore Garden 🡒
           </Button>
-          <Button variant={'leaf'} size={'leafLg'} className='w-fit'>
+          <Button variant={'leaf'} size={'leafLg'} className='w-fit font-gothamLight'>
             Learn more 🡒
           </Button>
         </div>
