--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -4,36 +4,44 @@ import { Button } from '@/components/ui/button';
 import { Image } from 'astro:assets';
 ---
 
-<div
-    class='bg-[url("src/assets/home/bg.jpg")] h-screen bg-no-repeat bg-cover bg-center relative'
-  >
-    <Image src={Leaf} alt={''} class={'absolute top-32 lg:top-36'} />
-    <div class='px-4 bg-black/50 h-screen flex items-center'>
-      <div
-        class='mt-20 text-[--clr-white-01] text-center lg:text-left max-w-[--max-width-content] mx-auto flex-grow'
+<section
+  class='bg-[url("src/assets/home/bg.jpg")] h-screen bg-no-repeat bg-cover bg-center relative'
+>
+  <Image src={Leaf} alt={''} class={'absolute top-32 lg:top-36'} />
+  <div class='px-4 bg-black/50 h-screen flex items-center'>
+    <div
+      class='mt-20 text-[--clr-white-01] text-center lg:text-left max-w-[--max-width-content] mx-auto flex-grow'
+    >
+      <h1
+        class='text-5xl sm:text-7xl md:text-8xl sm:w-4/5 lg:w-3/5 sm:mx-auto lg:mx-0 font-bold font-gothamBold'
       >
-        <h1
-          class='text-5xl sm:text-7xl md:text-8xl sm:w-4/5 lg:w-3/5 sm:mx-auto lg:mx-0 font-bold font-gothamBold'
+        Fertilizers for the future
+      </h1>
+      <div
+        class='mt-20 sm:mt-14 flex flex-col sm:flex-row gap-4 sm:gap-6 justify-center lg:justify-start items-center lg:text-xl lg:ml-2 font-gothamBook'
+      >
+        <p class='fert-before'>Soils Testing</p>
+        <p class='fert-before'>Crop Cultivation</p>
+        <p>Agricultural Progress</p>
+      </div>
+      <div
+        class='flex flex-col lg:flex-row gap-4 justify-center lg:justify-start lg:ml-2 items-center mt-20 sm:mt-14'
+      >
+        <Button
+          variant={'leaf'}
+          size={'leafLg'}
+          className='w-fit font-gothamLight'
         >
-          Fertilizers for the future
-        </h1>
-        <div
-          class='mt-20 sm:mt-14 flex flex-col sm:flex-row gap-4 sm:gap-6 justify-center lg:justify-start items-center lg:text-xl lg:ml-2 font-gothamBook'
+          Explore Garden 🡒
+        </Button>
+        <Button
+          variant={'leaf'}
+          size={'leafLg'}
+          className='w-fit font-gothamLight'
         >
-          <p class='fert-before'>Soils Testing</p>
-          <p class='fert-before'>Crop Cultivation</p>
-          <p>Agricultural Progress</p>
-        </div>
-        <div
-          class='flex flex-col lg:flex-row gap-4 justify-center lg:justify-start lg:ml-2 items-center mt-20 sm:mt-14'
-        >
-          <Button variant={'leaf'} size={'leafLg'} className='w-fit font-gothamLight'>
-            Explore Garden 🡒
-          </Button>
-          <Button variant={'leaf'} size={'leafLg'} className='w-fit font-gothamLight'>
-            Learn more 🡒
-          </Button>
-        </div>
+          Learn more 🡒
+        </Button>
       </div>
     </div>
   </div>
+</section>
