--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,10 @@
 ---
 import MainLayout from '../layouts/MainLayout.astro';
 import Hero from '../components/home/Hero.astro';
+import AboutSection from '../components/home/AboutSection.astro';
 ---
 
 <MainLayout>
   <Hero />
-  <div>
-    <div></div>
-  </div>
+  <AboutSection />
 </MainLayout>
