--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -4,7 +4,7 @@ import ContactHeader from '../components/home/ContactHeader.astro';
 import Navbar from '../components/home/Navbar';
 ---
 
-<html lang='en'>
+<html lang='en' class="overflow-x-hidden">
   <head>
     <meta charset='utf-8' />
     <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
