--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,11 @@
 import MainLayout from '../layouts/MainLayout.astro';
 import Hero from '../components/home/Hero.astro';
 import AboutSection from '../components/home/AboutSection.astro';
+import WhatWeDo from '../components/home/WhatWeDo.astro';
 ---
 
 <MainLayout>
   <Hero />
   <AboutSection />
+  <WhatWeDo />
 </MainLayout>
