Add ProductSection to page
TODO: add sample products to fully show page, incomplete at this time

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,12 @@ import MainLayout from '../layouts/MainLayout.astro';
 import Hero from '../components/home/Hero.astro';
 import AboutSection from '../components/home/AboutSection.astro';
 import WhatWeDo from '../components/home/WhatWeDo.astro';
+import PopularProducts from '../components/home/PopularProducts.astro';
 ---
 
 <MainLayout>
   <Hero />
   <AboutSection />
   <WhatWeDo />
+  <PopularProducts />
 </MainLayout>
