--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Hero from '../components/home/Hero.astro';
 import AboutSection from '../components/home/AboutSection.astro';
 import WhatWeDo from '../components/home/WhatWeDo.astro';
 import PopularProducts from '../components/home/PopularProducts.astro';
+import NewsSection from '../components/home/NewsSection.astro';
 ---
 
 <MainLayout>
@@ -11,4 +12,5 @@ import PopularProducts from '../components/home/PopularProducts.astro';
   <AboutSection />
   <WhatWeDo />
   <PopularProducts />
+  <NewsSection />
 </MainLayout>
