Add ContactBanner section to page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import AboutSection from '../components/home/AboutSection.astro';
 import WhatWeDo from '../components/home/WhatWeDo.astro';
 import PopularProducts from '../components/home/PopularProducts.astro';
 import NewsSection from '../components/home/NewsSection.astro';
+import ContactBanner from '../components/home/Contact.astro';
 ---
 
 <MainLayout>
@@ -13,4 +14,5 @@ import NewsSection from '../components/home/NewsSection.astro';
   <WhatWeDo />
   <PopularProducts />
   <NewsSection />
+  <ContactBanner />
 </MainLayout>
