Add Footer section to layout

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -2,6 +2,7 @@
 import '@/styles/globals.css';
 import ContactHeader from '../components/home/ContactHeader.astro';
 import Navbar from '../components/home/Navbar';
+import Footer from '../components/home/Footer.astro';
 ---
 
 <html lang='en' class="overflow-x-hidden">
@@ -20,5 +21,6 @@ import Navbar from '../components/home/Navbar';
     <main>
       <slot />
     </main>
+    <Footer />
   </body>
 </html>
