--- a/src/components/home/Contact.astro
+++ b/src/components/home/Contact.astro
@@ -10,7 +10,7 @@ import { Button } from '../ui/button';
   <div
     class='py-20 px-4 text-center md:text-left flex flex-col md:flex-row gap-4 md:items-center md:justify-between max-w-[--max-width-content] mx-auto'
   >
-    <div class='flex flex-col md:flex-row items-center gap-4 md:gap-0'>
+    <div class='flex flex-col md:flex-row items-center gap-4 md:gap-0 xl:-translate-x-12'>
       <Image src={Leaf} alt={'leaf icon'} width={213} height={128} class={''} />
       <div>
         <h2 class='font-gothamRounded font-bold text-3xl lg:text-5xl'>Get in touch</h2>
