Add color to informative p tags

--- a/src/components/home/AboutSection.astro
+++ b/src/components/home/AboutSection.astro
@@ -30,7 +30,7 @@ import Dots from '../../assets/home/aboutDots.png';
       >
         Improve the crop production of Africa
       </h2>
-      <p class='l-border font-montserrat text-sm w-[91%]'>
+      <p class='l-border font-montserrat text-sm w-[91%] p-text'>
         OmniFert is a wholly owned indigenous Ghanaian company focusing on
         improving the crop production of Africa by providing affordable
         fertilizers to farmers, establishing commercial sized farms to produce
