--- a/src/components/home/WhatWeDo.astro
+++ b/src/components/home/WhatWeDo.astro
@@ -9,13 +9,14 @@ import VideoImg from '../../assets/home/video.png';
       <Image src={VideoImg} alt={'sample video'} />
     </div>
     <div class='mt-10 md:mt-0 px-4 xl:mt-20'>
-      <strong class='strong l-border border-[--clr-green-01]'>What We Do</strong>
+      <strong class='strong l-border border-[--clr-green-01]'>What We Do</strong
+      >
       <h2
         class='text-3xl lg:text-5xl font-bold text-[--clr-green-03] my-4 lg:my-6 font-gothamRounded lg:w-[84%]'
       >
         We Are Different From Others To Provide Services
       </h2>
-      <p class='font-montserrat text-sm w-[91%] lg:w-[73.7%] leading-6'>
+      <p class='font-montserrat text-sm w-[91%] lg:w-[73.7%] leading-6 p-text'>
         We transform chemicals for a sustainable future by combining economic
         success with environmental protection and social responsibility. We
         focus on improving crop production by providing affordable and quality
