Add WhoWeAre component to about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,10 @@
 ---
 import MainLayout from '../layouts/MainLayout.astro';
 import PageHeader from '../components/PageHeader.astro';
+import Who from '@/components/about/Who.astro';
 ---
 
 <MainLayout>
   <PageHeader pageUrl='/about' title='About Us' />
+  <Who />
 </MainLayout>
