Add Objective section to about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,9 +2,11 @@
 import MainLayout from '../layouts/MainLayout.astro';
 import PageHeader from '../components/PageHeader.astro';
 import Who from '@/components/about/Who.astro';
+import Objective from '../components/about/Objective.astro';
 ---
 
 <MainLayout>
   <PageHeader pageUrl='/about' title='About Us' />
   <Who />
+  <Objective />
 </MainLayout>
