Rename section components for consistency

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,12 +1,12 @@
 ---
 import MainLayout from '../layouts/MainLayout.astro';
 import PageHeader from '../components/PageHeader.astro';
-import Who from '@/components/about/Who.astro';
-import Objective from '../components/about/Objective.astro';
+import WhoSection from '@/components/about/WhoSection.astro';
+import ObjectiveSection from '../components/about/ObjectiveSection.astro';
 ---
 
 <MainLayout>
   <PageHeader pageUrl='/about' title='About Us' />
-  <Who />
-  <Objective />
+  <WhoSection />
+  <ObjectiveSection />
 </MainLayout>
