Add Management section to about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,10 +3,12 @@ import MainLayout from '../layouts/MainLayout.astro';
 import PageHeader from '../components/PageHeader.astro';
 import WhoSection from '@/components/about/WhoSection.astro';
 import ObjectiveSection from '../components/about/ObjectiveSection.astro';
+import ManagementSection from '@/components/about/ManagementSection.astro';
 ---
 
 <MainLayout>
   <PageHeader pageUrl='/about' title='About Us' />
   <WhoSection />
   <ObjectiveSection />
+  <ManagementSection />
 </MainLayout>
