Add ISO section to about page
This commit also includes adding the Contact banner section to About page as well.

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,6 +4,8 @@ import PageHeader from '../components/PageHeader.astro';
 import WhoSection from '@/components/about/WhoSection.astro';
 import ObjectiveSection from '../components/about/ObjectiveSection.astro';
 import ManagementSection from '@/components/about/ManagementSection.astro';
+import IsoSection from '@/components/about/IsoSection.astro';
+import Contact from '@/components/home/Contact.astro';
 ---
 
 <MainLayout>
@@ -11,4 +13,6 @@ import ManagementSection from '@/components/about/ManagementSection.astro';
   <WhoSection />
   <ObjectiveSection />
   <ManagementSection />
+  <IsoSection />
+  <Contact />
 </MainLayout>
