--- a/src/components/home/NewsSection.astro
+++ b/src/components/home/NewsSection.astro
@@ -23,7 +23,7 @@ const allArticles = await getCollection('articles');
       {
         allArticles.map((article) => (
           <a
-            href='/'
+            href={article.slug}
             class='flex flex-col justify-center max-w-[370px] lg:grid 
             lg:grid-rows-[370px_minmax(0,_1fr)]_minmax(0,_1fr)]'
           >
