--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -59,6 +59,7 @@
 
     --max-width: 1440px;
     --max-width-content: 1220px;
+    --max-width-article: 100ch;
 
     /* COLORS */
     --clr-green-01: #009444;
