Change price type

--- a/src/components/shop/PopularProduct.astro
+++ b/src/components/shop/PopularProduct.astro
@@ -6,7 +6,7 @@ type Props = {
   image: ImageMetadata;
   imageAlt: string;
   name: string;
-  price: string;
+  price: number;
   oldPrice?: string;
 };
 
