--- a/src/components/shop/PopularProduct.astro
+++ b/src/components/shop/PopularProduct.astro
@@ -8,14 +8,36 @@ type Props = {
   name: string;
   price: number;
   oldPrice?: string;
+  url: string;
+  sale: boolean;
 };
 
-const { image, imageAlt, name, price, oldPrice } = Astro.props;
+const {
+  image,
+  imageAlt,
+  name,
+  price,
+  oldPrice,
+  url,
+  sale = false,
+} = Astro.props;
 ---
 
-<li class='text-center flex flex-col items-center justify-center'>
-  <a href='/'
-    ><Image src={image} alt={imageAlt} class={'mb-6'} />
+<li class='text-center flex flex-col items-center justify-center relative'>
+  <a href={url}>
+    <Image
+      src={image}
+      alt={imageAlt}
+      class={'mb-6 object-cover w-[270px] h-[260px]'}
+      loading={'eager'}
+    />
+    {
+      sale && (
+        <span class='bg-[#FF9100] absolute top-2 left-2 text-white uppercase w-[60px] py-1 font-montserrat rounded'>
+          Sale
+        </span>
+      )
+    }
     <div>
       <h3 class='text-[--clr-green-03] font-semibold font-gothamRounded mb-2'>
         {name}
@@ -24,18 +46,18 @@ const { image, imageAlt, name, price, oldPrice } = Astro.props;
         oldPrice ? (
           <div class='mb-2 font-gothamLight flex items-center justify-center gap-4'>
             <p class='text-[--clr-green-01]'>GHS {price}</p>
-            <p class="line-through text-[#999999]">GHS {oldPrice}</p>
+            <p class='line-through text-[#999999]'>GHS {oldPrice}</p>
           </div>
         ) : (
           <p class='mb-2 font-gothamLight text-[--clr-green-01]'>GHS {price}</p>
         )
       }
       <div class='flex gap-1 justify-center items-center'>
-        <Image src={StarIcon} alt={''} />
-        <Image src={StarIcon} alt={''} />
-        <Image src={StarIcon} alt={''} />
-        <Image src={StarIcon} alt={''} />
-        <Image src={StarIcon} alt={''} />
+        <Image src={StarIcon} alt={''} loading={'eager'} />
+        <Image src={StarIcon} alt={''} loading={'eager'} />
+        <Image src={StarIcon} alt={''} loading={'eager'} />
+        <Image src={StarIcon} alt={''} loading={'eager'} />
+        <Image src={StarIcon} alt={''} loading={'eager'} />
       </div>
     </div></a
   >
