Add size limitation for HQ images

--- a/src/components/home/NewsSection.astro
+++ b/src/components/home/NewsSection.astro
@@ -30,7 +30,7 @@ const allArticles = await getCollection('articles');
             <img
               src={article.data.image}
               alt={article.data.imageAlt}
-              class=''
+              class='h-[201.86px] w-[370px] object-cover'
             />
             <strong class='strong l-border-dark mt-6'>Article</strong>
             <h3 class='text-xl font-bold text-[--clr-green-03] my-4 lg:my-6 font-gothamRounded'>
