Add larger text on bigger screens

--- a/src/components/products/RanProductSection.astro
+++ b/src/components/products/RanProductSection.astro
@@ -30,7 +30,7 @@ const chosenItems = nums.map((num) => {
 <section>
   <div>
     <h2
-      class='text-3xl font-gothamBold text-[--clr-green-03] mb-20 mt-10 text-center lg:text-left'
+      class='text-3xl lg:text-4xl font-gothamBold text-[--clr-green-03] mb-20 mt-10 text-center lg:text-left'
     >
       Related Products
     </h2>
