Add price to cart store
Reflect all affected pages and components by adding price to the required props

--- a/src/pages/products/[slug].astro
+++ b/src/pages/products/[slug].astro
@@ -99,7 +99,7 @@ const {
             <div class='border-t-2 pt-6 mt-4'>
               <p class='text-[--clr-font] font-montserrat'>{desc}</p>
             </div>
-            <ProductForm client:load id={id} title={title} image={image} />
+            <ProductForm client:load id={id} title={title} image={image} price={price} />
             <button class='font-gothamBook text-[--clr-font] self-start'
               >Add to wishlist</button
             >
