Add blog image option for page header

--- a/src/components/PageHeader.astro
+++ b/src/components/PageHeader.astro
@@ -16,7 +16,7 @@ const bg = (() => {
     case 'Blog':
       return 'bg-header-blog';
     default:
-      return;
+      return 'bg-header-blog';
   }
 })();
 ---
