Fix next button anchor path

--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -160,7 +160,7 @@ console.log(params);
         <!-- Next button -->
         {
           page.currentPage != page.lastPage ? (
-            <a href={`${page.url.current}/${page.lastPage}`}>
+            <a href={`/blog/${page.lastPage}`}>
               <Button className='rounded-full py-4 w-[60px] h-[60px] text-center border bg-white text-[--clr-font] text-3xl'>
                 »
               </Button>
