--- a/src/components/home/NewsSection.astro
+++ b/src/components/home/NewsSection.astro
@@ -25,7 +25,7 @@ const allArticles = await getCollection('articles', ({ data }) => {
       {
         allArticles.map((article) => (
           <a
-            href={article.slug}
+            href={`/blog/${article.slug}`}
             class='flex flex-col justify-center max-w-[370px] lg:grid 
             lg:grid-rows-[370px_minmax(0,_1fr)]_minmax(0,_1fr)]'
           >
