--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -72,10 +72,12 @@ console.log(params);
     ))
   } -->
 
-  <div class='px-4 mt-20'>
-    <div class='max-w-[--max-width-content] mx-auto grid grid-cols-[1fr_370px]'>
+  <div class='mt-20'>
+    <div
+      class='px-4 max-w-[--max-width-content] mx-auto grid grid-cols-[1fr_370px] gap-12'
+    >
       <Sidebar />
-      <ul class='max-w-[760px] mx-auto md:order-1'>
+      <ul class='mx-auto md:order-1'>
         {
           page.data.map((article: Article) => (
             <li>
@@ -116,7 +118,7 @@ console.log(params);
     </div>
     <div>
       <div
-        class='flex gap-4 font-montserrat font-medium mb-10 mt-4 max-w-[--max-width-content] mx-auto px-10'
+        class='flex gap-4 font-montserrat font-medium mb-10 mt-4 max-w-[--max-width-content] mx-auto px-4'
       >
         <!-- Back button -->
         {
