--- a/src/components/PageHeader.astro
+++ b/src/components/PageHeader.astro
@@ -22,7 +22,7 @@ const bg = (() => {
 ---
 
 <section
-  class={`${bg} bg-no-repeat bg-cover bg-center ${title === 'Blog' || (title === 'Contact' && 'bg-[center_top_-8rem]')} mt-20 h-[440px]`}
+  class={`${bg} bg-no-repeat bg-cover bg-center ${title === 'Blog' || (title === 'Contact' && 'bg-top xl:bg-[center_top_-8rem]')} mt-20 h-[440px]`}
 >
   <div
     class='px-4 bg-black/50 h-full w-full flex flex-col text-[--clr-white-01] justify-center items-center font-gothamRounded text-center'
