Adjust image size on different viewports

--- a/src/components/contact/MessageSection.astro
+++ b/src/components/contact/MessageSection.astro
@@ -9,7 +9,7 @@ import MessageImage from '@/assets/contact/message-image.png';
     <Image
       src={MessageImage}
       alt={'message'}
-      class={'object-cover h-[839.59px]'}
+      class={'object-cover h-[350px] sm:h-[400px] md:h-[839.59px]'}
     />
     <MessageForm client:load />
   </div>
